syntax = "proto3";

package KPProto.Msg;

option optimize_for = LITE_RUNTIME;
option go_package = "github.com/bytelang/kplayer/types/core/msg";

message EventMessagePlayerStarted {
 bytes error = 3;
}

message EventMessagePlayerEnded {
 bytes error = 3;
}

message EventMessagePlayerPause {
 bytes error = 3;
}

message EventMessagePlayerContinue {
 bytes error = 3;
}

message EventMessagePlayerSkip {
 bytes error = 3;
}
